src/objects/c2g__codaPaymentHistory__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Log of modifications and resulting status of the payment.</description>
    <fields>
        <fullName>c2g__DateTime__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Payments History</relationshipLabel>
        <relationshipName>PaymentsHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__StageInProcess__c</fullName>
        <label>Stage in Process</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentsHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deprecated: Payment History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>